--- a/pages/image.html
+++ b/pages/image.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>100sen2image4web</title>
+  <script src="src/genImage.js"></script>
+  <script defer src="src/main.js"></script>
 </head>
 
 <body>
@@ -13,7 +15,6 @@
   <body>
     <img id="image" src="#" width="1600" height="900">
   </body>
-  <script src="src/main.js"></script>
 
 </body>
 
