--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
     <link rel="stylesheet" href="style/home.css">
     <title>100sen2image4web</title>
-    <script defer src="src/home.js"></script>
+    <script src="src/genImage.js"></script>
+    <script defer src="src/index.js"></script>
 </head>
 <body>
     <header><h1>100sen2image4web</h1></header>
@@ -18,16 +19,18 @@
     <div class="vertical">
         <p>
             <label for="cell-width">横</label><br>
-            <input type="number" id="cell-width" required value="10" min="1">
+            <input type="number" id="cell-x" required value="10" min="1">
         </p>
         <p>
             <label for="cell-height">縦</label><br>
-            <input type="number" id="cell-height" required value="10" min="1">
+            <input type="number" id="cell-y" required value="10" min="1">
         </p>
     </div>
 
     <p>
-        <button onclick="genImage()">生成</button>
+        <button onclick="genBtnOnClick()">生成</button>
     </p>
+
+    <img id="image" src="#" width="100%">
 </body>
 </html>
