--- a/pages/index.html
+++ b/pages/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
-    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="style/index.css">
     <title>100sen2image4web</title>
     <script src="src/genImage.js"></script>
     <script defer src="src/index.js"></script>
@@ -31,6 +31,6 @@
         <button onclick="genBtnOnClick()">生成</button>
     </p>
 
-    <img id="image" src="#" width="100%">
+    <img id="image" alt src>
 </body>
 </html>
