--- a/pages/index.html
+++ b/pages/index.html
@@ -31,6 +31,9 @@
         <button onclick="genBtnOnClick()">生成</button>
     </p>
 
-    <img id="image" alt src>
+    <div id="image-wrapper" data-view="void">
+        <img id="loading" src="./img/loading.svg" alt="loading">
+        <img id="image">
+    </div>
 </body>
 </html>
