--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
     <script defer src="src/index.js"></script>
 </head>
 <body>
-    <header><h1>100sen2image4web</h1></header>
+    <header><a href="/index.html"><h1>100sen2image4web</h1></a></header>
     <p>
         <label for="list-url">プレイリストのURL</label><br>
         <input type="text" id="list-url" required placeholder="https://kiite.jp/playlist/xxxxxxxx">
