エラー時の動きを追加

--- a/pages/image.html
+++ b/pages/image.html
@@ -17,6 +17,7 @@
     <div id="image-wrapper" data-view="void">
       <img id="loading" src="./img/loading.svg" alt="loading">
       <img id="image">
+      <div id="error"></div>
     </div>
   </body>
 
