--- a/pages/index.html
+++ b/pages/index.html
@@ -30,6 +30,7 @@
     <div id="image-wrapper" data-view="void">
         <img id="loading" src="./img/loading.svg" alt="loading">
         <img id="image">
+        <div id="error"></div>
     </div>
 </body>
 </html>
